# homework-gen

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  STATUS-FINAL.md  STATUS.md  config.example.yaml  demo.py  pyproject.toml  requirements-dev.txt  requirements.txt  test_integration.py
homework_generator/: __init__.py  cli.py  config.py  content_generator.py  formatter.py  llm_client.py  models.py  pdf_generator.py  prompt_templates.py
templates/: assignment.html  styles.css
templates/prompts/: art.md  career_technical.md  computer_science.md  economics.md  english.md  environmental_science.md  generic.md  health.md  math.md  music.md  philosophy.md  physical_education.md  psychology.md  science.md  social_studies.md  world_languages.md
tests/: __init__.py  test_cli.py  test_config.py  test_content_generator.py  test_formatter.py  test_llm_client.py  test_models.py  test_pdf_generator.py  test_prompt_templates.py
tests/fixtures/: expected_assignments.json  sample_llm_responses.json
